# SimReady

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  mcmaster_catalog.py  pyproject.toml
output/: fan_fast.yaml  vise_vlm.yaml
scripts/: init_dirs.sh  run_batch_all.sh  run_batch_remaining.sh
simready/: __init__.py  __main__.py  articulation_inference.py  batch.py  cli.py  pipeline.py  quality_gate.py
simready/acquisition/: abc_dataset.py  agent.py  freecad_source.py  github_source.py  mcmaster_api.py  mcmaster_scraper.py  nist_source.py  partnet_adapter.py  partnet_downloader.py  partnet_parser.py  sources.py  traceparts_reader.py  vlm_material.py
simready/catalog/: db.py
simready/config/: defaults.yaml  settings.py
simready/generation/: __init__.py  cadquery_reference.py  critic.py  executor.py  orchestrator.py  planner.py  renderer.py  schemas.py
simready/geometry/: mesh_processing.py
simready/ingestion/: sldprt_converter.py  step_reader.py  stl_reader.py
simready/materials/: material_map.py
simready/semantics/: classifier.py
temp/: convert_all.py  vlm_config.yaml
tests/: test_acquisition.py  test_articulation.py  test_batch.py  test_catalog.py  test_collision.py  test_convex_decomposition.py  test_enhancements.py  test_link_mass_props.py  test_m0.py  test_material_map.py  test_meters_per_unit.py  test_new_sources.py  test_physics_mass_props.py  test_provenance.py  test_quality_gate.py  test_run_pipeline.py  test_settings.py  test_tag.py  test_unit_detection.py  test_usd_export.py  test_validation.py  test_vlm_material.py
(+7 files in other folders)
