[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simready"
version = "0.1.0"
description = "Automated pipeline for creating Sim-Ready OpenUSD assets from CAD/CAE sources"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "trimesh>=4.0",
    "networkx>=3.0",
    "fast-simplification>=0.1",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "py7zr>=0.20",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
cad = [
    "OCP>=7.7",  # pythonocc-core for STEP/IGES parsing
]

[project.scripts]
simready = "simready.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
include = ["simready*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
